# python-project-83

./: .flake8  .gitignore  Makefile  README.md  database.sql  pyproject.toml  ruff.toml
.github/workflows/: main.yml
page_analyzer/: app.py  database.py  parser.py  url_normalizer.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
